--- a/public/css/components/Intro.css
+++ b/public/css/components/Intro.css
@@ -15,7 +15,13 @@
  */
 
 .Intro {
-  margin: 4em auto 0;
-  text-align: center;
-  max-width: 42em;
+  margin: var(--vgap-lg) auto 0;
 }
+
+@media (min-width: 48em) {
+  .Intro {
+    text-align: center;
+    max-width: 42em;
+  }
+}
+
