--- a/public/css/components/Report.css
+++ b/public/css/components/Report.css
@@ -52,8 +52,8 @@
 
 .Report-metric {
   border-top: 1px solid #eee;
-  margin: 3em 0;
-  padding-top: 3em;
+  margin: var(--vgap-lg) 0;
+  padding-top: var(--vgap-lg);
 }
 
 .Report-metricName {
